--- a/roles/common-rpi/handlers/main.yml
+++ b/roles/common-rpi/handlers/main.yml
@@ -1,2 +1,15 @@
 ---
 # handlers file for common-rpi
+
+- name: "Rebuild cm4io-fan kernel module"
+  ansible.builtin.shell:
+    cmd: "dkms build -m cm4io-fan -v 0.1.1"
+  become: yes
+  listen: "build cm4io-fan"
+  notify: "install cm4io-fan"
+- name: "Install cm4io-fan kernel module"
+  ansible.builtin.shell:
+    cmd: "dkms install -m cm4io-fan -v 0.1.1"
+  become: yes
+  listen: "install cm4io-fan"
+  notify: "reboot"
