move config into own tasks file

--- a/roles/common-rpi/tasks/main.yml
+++ b/roles/common-rpi/tasks/main.yml
@@ -1,27 +1,10 @@
 ---
 # tasks file for common-rpi
-- name: "Determine config file path"
-  ansible.builtin.set_fact:
-    config_path: "/boot/firmware/usercfg.txt"
-  when: ansible_lsb.release == "20.04"
-- name: "Determine config file path"
-  ansible.builtin.set_fact:
-    config_path: "/boot/firmware/config.txt"
-  when: ansible_lsb.release == "21.10"
-
-- name: "Setup {{ config_path }}"
-  ansible.builtin.template:
-    dest: "{{ config_path }}"
-    group: "root"
-    mode: "u=rwx,g=rx,o=rx"
-    owner: "root"
-    src: "config.txt.j2"
-  notify: "reboot"
-
 - name: "Install linux-modules-extra-raspi"
   ansible.builtin.apt:
     name: "linux-modules-extra-raspi"
     state: "present"
 
+- include: "config.yml"
 - include: "cm4io-fan.yml"
   when: common_rpi__cm4io_fan != None
