support bonds, including bonding of the primary interface

--- a/host_vars/infra1.os.hogs.tswn.us.yml
+++ b/host_vars/infra1.os.hogs.tswn.us.yml
@@ -1,11 +1,11 @@
 ---
 ansible_cron__interval: "daily"
 
-common__additional_ethernet_interfaces:
-  - name: "eth1"
-    inet:
-      mode: "manual"
-      lines: []
+common__ethernet_interface_bonds:
+  bond0:
+    interfaces:
+      - eth0
+      - enx00e04c68012c # This should be eth1, but device now things it is this
 
 common__gateway_v4_address: "10.10.0.1"
 common__ip_addresses:
