--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -2,6 +2,15 @@
 # defaults file for common
 common__additional_ethernet_interfaces: []
 
+# Dictonary of bonds.  For example:
+# common__ethernet_interface_bonds:
+#   bond0:
+#     interfaces:
+#       - eth0
+#       - eth1
+
+common__ethernet_interface_bonds: {}
+
 # Interface name of the primary interface of the device.  This falls back to
 # ansible_default_ipv4.interface if falsey.
 common__ethernet_primary_interface: ""
