--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -1,6 +1,12 @@
 ---
 - include: iscsi.yml
 
+- name: "Install linux-modules-extra-raspi"
+  ansible.builtin.apt:
+    name: "linux-modules-extra-raspi"
+    state: "present"
+  when: ansible_local.rpi.is and ansible_lsb.release == "21.10"
+
 # Networking
 - name: "Set hostname"
   ansible.builtin.hostname:
