--- a/roles/common-rpi/tasks/cm4io-fan.yml
+++ b/roles/common-rpi/tasks/cm4io-fan.yml
@@ -10,6 +10,7 @@
     repo: "https://github.com/sdwilsh/cm4io-fan.git"
     dest: "/usr/src/cm4io-fan-0.1.1/"
     refspec: "refs/heads/ubuntu-21.10"
+    version: "origin/ubuntu-21.10"
   become: yes
   notify: "build cm4io-fan"
 - name: "Load module at boot"
