recursively apply sanoid config to openstack zpool

--- a/roles/common-openstack/tasks/main.yml
+++ b/roles/common-openstack/tasks/main.yml
@@ -24,6 +24,7 @@
     content: |
       [openstack]
           use_template = production
+          recursive = yes
       
       [template_production]
           frequently = 0
