--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -19,16 +19,15 @@ common__etc_dir: "/etc"
 
 common__ntp_pool: "pool.ntp.hogs.tswn.us"
 
-common__unix_groups:
-  - name: "ansible"
-    gid: 2000
-    sudo: true
-  - name: "zabbix"
-    gid: 2001
-  - name: "srcs"
-    gid: 2050
-common__unix_users:
-  - name: "ansible"
-    uid: 2000
-  - name: "zabbix"
-    uid: 2001
+# Groups to create.  For example:
+# common__unix_groups:
+#   - name: "ansible"
+#     gid: 2000
+#     sudo: true
+common__unix_groups: []
+
+# Users to create.  For example:
+# common__unix_groups:
+#   - name: "ansible"
+#     gid: 2000
+common__unix_users: []
