--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,6 +4,7 @@
     name: "{{ item.name }}"
     gid: "{{ item.gid }}"
     state: present
+  become: yes
   loop: "{{ common__unix_groups }}"
 - name: Create base users
   user:
@@ -13,6 +14,7 @@
     shell: "/bin/bash"
     state: present
     uid: "{{ item.uid }}"
+  become: yes
   loop: "{{ common__unix_users }}"
   when: ansible_distribution != "FreeBSD"
 - name: Create base users (FreeBSD)
