--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -38,6 +38,7 @@
     dest: "{{ common__etc_dir + '/sudoers.d/ansible' }}"
     validate: 'visudo -cf %s'
     mode: 0440
+  become: yes
 
 - include: facts.yml
 
@@ -61,9 +62,9 @@
   user:
     name: provision
     state: absent
-  when: ansible_user_id != "provision" and ansible_env.SUDO_USER != "provision"
+  when: ansible_user == "provision"
 - name: Remove provision group
   group:
     name: provision
     state: absent
-  when: ansible_user_id != "provision" and ansible_env.SUDO_USER != "provision"
+  when: ansible_user == "provision"
