--- a/vyos.yml
+++ b/vyos.yml
@@ -938,6 +938,9 @@
               - name: "roku-den"
                 ip: "10.117.0.21"
                 mac: "d8:31:34:66:95:f1"
+              - name: "hue"
+                ip: "10.117.0.34"
+                mac: "ec:b5:fa:9b:c1:f6"
             subnet: "10.117.0.0/23"
           - name: "GUEST"
             default_router: "10.131.0.1"
