update firewall rules for new dhcp-sync setup

--- a/roles/vyos-firewall/zones/local/from-sync-ipv4.yml
+++ b/roles/vyos-firewall/zones/local/from-sync-ipv4.yml
@@ -12,6 +12,14 @@
   source:
     group:
       address_group: "PEER-v4"
+- description: "Allow dhcp-sync"
+  action: "accept"
+  protocol: "tcp"
+  destination:
+    port: "520"
+  source:
+    group:
+      address_group: "PEER-v4"
 - description: "Allow ICMP"
   action: "accept"
   protocol: "icmp"
