--- a/vyos.yml
+++ b/vyos.yml
@@ -548,18 +548,47 @@
         - firewall-rules
       vars:
         vyos_firewall__zones:
-          - "GUEST"
-          - "GWORK"
-          - "HOME"
-          - "IOT"
-          - "LOCAL"
-          - "MAN"
-          - "NOWAN"
-          - "ROUTER-LAB"
-          - "SERVICE82"
-          - "SYNC"
-          - "UNIFI-MAN"
-          - "WAN"
+          - name: "UNIFI-MAN"
+            description: "unifi management vlan ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.1"
+          - name: "SYNC"
+            description: "VRRP and other related synchronizations connection ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.9"
+          - name: "MAN"
+            description: "management vlan ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.10"
+          - name: "GWORK"
+            description: "work network ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.15"
+          - name: "IOT"
+            description: "IoT network ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.66"
+          - name: "NOWAN"
+            description: "internet of shit: no WAN or other access ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.67"
+          - name: "SERVICE82"
+            description: "installation02 - unifi controller ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.82"
+          - name: "ROUTER-LAB"
+            description: "Lab network for vyos router testing ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.100"
+          - name: "HOME"
+            description: "home network with home services ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.117"
+          - name: "GUEST"
+            description: "guest network ({{ ansible_managed }})"
+            interface: "{{ vyos__lan_interface }}.131"
+          - name: "LOCAL"
+            description: "{{ ansible_managed }}"
+            local-zone: yes
+          - name: "WAN-Cellular"
+            description: "Cellular WAN connection ({{ ansible_managed }})"
+            firewall_name: "WAN"
+            interface: "{{ vyos__wan_cellular_interface }}"
+          - name: "WAN-CenturyLink"
+            description: "CenturyLink WAN connection ({{ ansible_managed }})"
+            firewall_name: "WAN"
+            interface: "pppoe0"
 
     - name: "Set Zone Policy"
       vyos.vyos.vyos_config:
