--- a/roles/vyos-firewall/tasks/main.yml
+++ b/roles/vyos-firewall/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for vyos-firewall
+- name: "Set default attribute values on vyos_firewall__zones"
+  ansible.builtin.set_fact:
+    vyos_firewall__zones: "{{ lookup('template', 'templates/vyos_firewall__zones.j2') | from_yaml }}"
 - name: "Load Firewall Zone Information for IPv4"
   ansible.builtin.include_tasks: "load_zone_info.yml"
   loop: "{{ (_named_firewalls + _default_named_firewalls) | unique | sort }}"
