--- a/vyos.yml
+++ b/vyos.yml
@@ -545,12 +545,11 @@
         name: "vyos-firewall"
       tags:
         - firewall
-        - firewall-rules
       vars:
         vyos_firewall__zones:
           - name: "UNIFI-MAN"
             description: "unifi management vlan ({{ ansible_managed }})"
-            interface: "{{ vyos__lan_interface }}.1"
+            interface: "{{ vyos__lan_interface }}"
           - name: "SYNC"
             description: "VRRP and other related synchronizations connection ({{ ansible_managed }})"
             interface: "{{ vyos__lan_interface }}.9"
@@ -590,140 +589,6 @@
             firewall_name: "WAN"
             interface: "pppoe0"
 
-    - name: "Set Zone Policy"
-      vyos.vyos.vyos_config:
-        lines:
-          # GUEST Zone
-          - "set zone-policy zone GUEST default-action drop"
-          - "set zone-policy zone GUEST description 'guest network ({{ ansible_managed }})'"
-          - "set zone-policy zone GUEST from LOCAL firewall name GUEST-from-LOCAL-v4"
-          - "set zone-policy zone GUEST from WAN-Cellular firewall name GUEST-from-WAN-v4"
-          - "set zone-policy zone GUEST from WAN-CenturyLink firewall name GUEST-from-WAN-v4"
-          - "set zone-policy zone GUEST interface {{ vyos__lan_interface }}.131"
-          # GWORK Zone
-          - "set zone-policy zone GWORK default-action drop"
-          - "set zone-policy zone GWORK description 'work network ({{ ansible_managed }})'"
-          - "set zone-policy zone GWORK from LOCAL firewall name GWORK-from-LOCAL-v4"
-          - "set zone-policy zone GWORK from WAN-Cellular firewall name GWORK-from-WAN-v4"
-          - "set zone-policy zone GWORK from WAN-CenturyLink firewall name GWORK-from-WAN-v4"
-          - "set zone-policy zone GWORK interface {{ vyos__lan_interface }}.15"
-          # HOME Zone
-          - "set zone-policy zone HOME default-action drop"
-          - "set zone-policy zone HOME description 'home network with home services ({{ ansible_managed }})'"
-          - "set zone-policy zone HOME from IOT firewall name HOME-from-IOT-v4"
-          - "set zone-policy zone HOME from LOCAL firewall name HOME-from-LOCAL-v4"
-          - "set zone-policy zone HOME from LOCAL firewall ipv6-name HOME-from-LOCAL-v6"
-          - "set zone-policy zone HOME from MAN firewall name HOME-from-MAN-v4"
-          - "set zone-policy zone HOME from MAN firewall ipv6-name HOME-from-MAN-v6"
-          - "set zone-policy zone HOME from NOWAN firewall name HOME-from-NOWAN-v4"
-          - "set zone-policy zone HOME from SERVICE82 firewall name HOME-from-SERVICE82-v4"
-          - "set zone-policy zone HOME from UNIFI-MAN firewall name HOME-from-UNIFI-MAN-v4"
-          - "set zone-policy zone HOME from WAN-Cellular firewall name HOME-from-WAN-v4"
-          - "set zone-policy zone HOME from WAN-CenturyLink firewall name HOME-from-WAN-v4"
-          - "set zone-policy zone HOME interface {{ vyos__lan_interface }}.117"
-          # IOT Zone
-          - "set zone-policy zone IOT default-action drop"
-          - "set zone-policy zone IOT description 'IoT network ({{ ansible_managed }})'"
-          - "set zone-policy zone IOT from HOME firewall name IOT-from-HOME-v4"
-          - "set zone-policy zone IOT from LOCAL firewall name IOT-from-LOCAL-v4"
-          - "set zone-policy zone IOT from WAN-Cellular firewall name IOT-from-WAN-v4"
-          - "set zone-policy zone IOT from WAN-CenturyLink firewall name IOT-from-WAN-v4"
-          - "set zone-policy zone IOT interface {{ vyos__lan_interface }}.66"
-          # LOCAL Zone
-          - "set zone-policy zone LOCAL default-action drop"
-          - "set zone-policy zone LOCAL description '{{ ansible_managed }}'"
-          - "set zone-policy zone LOCAL from GUEST firewall name LOCAL-from-GUEST-v4"
-          - "set zone-policy zone LOCAL from GWORK firewall name LOCAL-from-GWORK-v4"
-          - "set zone-policy zone LOCAL from HOME firewall name LOCAL-from-HOME-v4"
-          - "set zone-policy zone LOCAL from HOME firewall ipv6-name LOCAL-from-HOME-v6"
-          - "set zone-policy zone LOCAL from IOT firewall name LOCAL-from-IOT-v4"
-          - "set zone-policy zone LOCAL from MAN firewall name LOCAL-from-MAN-v4"
-          - "set zone-policy zone LOCAL from MAN firewall ipv6-name LOCAL-from-MAN-v6"
-          - "set zone-policy zone LOCAL from NOWAN firewall name LOCAL-from-NOWAN-v4"
-          - "set zone-policy zone LOCAL from UNIFI-MAN firewall name LOCAL-from-UNIFI-MAN-v4"
-          - "set zone-policy zone LOCAL from ROUTER-LAB firewall name LOCAL-from-ROUTER-LAB-v4"
-          - "set zone-policy zone LOCAL from SERVICE82 firewall name LOCAL-from-SERVICE82-v4"
-          - "set zone-policy zone LOCAL from SYNC firewall name LOCAL-from-SYNC-v4"
-          - "set zone-policy zone LOCAL from WAN-Cellular firewall name LOCAL-from-WAN-v4"
-          - "set zone-policy zone LOCAL from WAN-CenturyLink firewall name LOCAL-from-WAN-v4"
-          - "set zone-policy zone LOCAL local-zone"
-          # MAN Zone
-          - "set zone-policy zone MAN default-action drop"
-          - "set zone-policy zone MAN description 'management vlan ({{ ansible_managed }})'"
-          - "set zone-policy zone MAN from HOME firewall name MAN-from-HOME-v4"
-          - "set zone-policy zone MAN from HOME firewall ipv6-name MAN-from-HOME-v6"
-          - "set zone-policy zone MAN from LOCAL firewall name MAN-from-LOCAL-v4"
-          - "set zone-policy zone MAN from LOCAL firewall ipv6-name MAN-from-LOCAL-v6"
-          - "set zone-policy zone MAN from UNIFI-MAN firewall name MAN-from-UNIFI-MAN-v4"
-          - "set zone-policy zone MAN from WAN-Cellular firewall name MAN-from-WAN-v4"
-          - "set zone-policy zone MAN from WAN-CenturyLink firewall name MAN-from-WAN-v4"
-          - "set zone-policy zone MAN interface {{ vyos__lan_interface }}.10"
-          # NOWAN Zone
-          - "set zone-policy zone NOWAN default-action drop"
-          - "set zone-policy zone NOWAN description 'internet of shit: no WAN or other access ({{ ansible_managed }})'"
-          - "set zone-policy zone NOWAN from HOME firewall name NOWAN-from-HOME-v4"
-          - "set zone-policy zone NOWAN from LOCAL firewall name NOWAN-from-LOCAL-v4"
-          - "set zone-policy zone NOWAN interface {{ vyos__lan_interface }}.67"
-          # ROUTER-LAB Zone
-          - "set zone-policy zone ROUTER-LAB default-action drop"
-          - "set zone-policy zone ROUTER-LAB description 'Lab network for vyos router testing ({{ ansible_managed }})'"
-          - "set zone-policy zone ROUTER-LAB from LOCAL firewall name ROUTER-LAB-from-LOCAL-v4"
-          - "set zone-policy zone ROUTER-LAB from WAN-Cellular firewall name ROUTER-LAB-from-WAN-v4"
-          - "set zone-policy zone ROUTER-LAB from WAN-CenturyLink firewall name ROUTER-LAB-from-WAN-v4"
-          - "set zone-policy zone ROUTER-LAB interface {{ vyos__lan_interface }}.100"
-          # SERVICE82 Zone
-          - "set zone-policy zone SERVICE82 default-action drop"
-          - "set zone-policy zone SERVICE82 description 'installation02 - unifi controller ({{ ansible_managed }})'"
-          - "set zone-policy zone SERVICE82 from HOME firewall name SERVICE82-from-HOME-v4"
-          - "set zone-policy zone SERVICE82 from LOCAL firewall name SERVICE82-from-LOCAL-v4"
-          - "set zone-policy zone SERVICE82 from UNIFI-MAN firewall name SERVICE82-from-UNIFI-MAN-v4"
-          - "set zone-policy zone SERVICE82 from WAN-Cellular firewall name SERVICE82-from-WAN-v4"
-          - "set zone-policy zone SERVICE82 from WAN-CenturyLink firewall name SERVICE82-from-WAN-v4"
-          - "set zone-policy zone SERVICE82 interface {{ vyos__lan_interface }}.82"
-          # SYNC Zone
-          - "set zone-policy zone SYNC default-action drop"
-          - "set zone-policy zone SYNC description 'VRRP and other related synchronizations connection ({{ ansible_managed }})'"
-          - "set zone-policy zone SYNC from LOCAL firewall name SYNC-from-LOCAL-v4"
-          - "set zone-policy zone SYNC interface {{ vyos__lan_interface }}.9"
-          # UNIFI-MAN Zone
-          - "set zone-policy zone UNIFI-MAN default-action drop"
-          - "set zone-policy zone UNIFI-MAN description 'unifi management vlan ({{ ansible_managed }})'"
-          - "set zone-policy zone UNIFI-MAN from HOME firewall name UNIFI-MAN-from-HOME-v4"
-          - "set zone-policy zone UNIFI-MAN from LOCAL firewall name UNIFI-MAN-from-LOCAL-v4"
-          - "set zone-policy zone UNIFI-MAN from MAN firewall name UNIFI-MAN-from-MAN-v4"
-          - "set zone-policy zone UNIFI-MAN from SERVICE82 firewall name UNIFI-MAN-from-SERVICE82-v4"
-          - "set zone-policy zone UNIFI-MAN from WAN-Cellular firewall name UNIFI-MAN-from-WAN-v4"
-          - "set zone-policy zone UNIFI-MAN from WAN-CenturyLink firewall name UNIFI-MAN-from-WAN-v4"
-          - "set zone-policy zone UNIFI-MAN interface {{ vyos__lan_interface }}"
-          # WAN-Cellular Zone
-          - "set zone-policy zone WAN-Cellular default-action drop"
-          - "set zone-policy zone WAN-Cellular description 'Cellular WAN connection ({{ ansible_managed }})'"
-          - "set zone-policy zone WAN-Cellular from GUEST firewall name WAN-from-GUEST-v4"
-          - "set zone-policy zone WAN-Cellular from GWORK firewall name WAN-from-GWORK-v4"
-          - "set zone-policy zone WAN-Cellular from HOME firewall name WAN-from-HOME-v4"
-          - "set zone-policy zone WAN-Cellular from IOT firewall name WAN-from-IOT-v4"
-          - "set zone-policy zone WAN-Cellular from LOCAL firewall name WAN-from-LOCAL-v4"
-          - "set zone-policy zone WAN-Cellular from MAN firewall name WAN-from-MAN-v4"
-          - "set zone-policy zone WAN-Cellular from ROUTER-LAB firewall name WAN-from-ROUTER-LAB-v4"
-          - "set zone-policy zone WAN-Cellular from SERVICE82 firewall name WAN-from-SERVICE82-v4"
-          - "set zone-policy zone WAN-Cellular from UNIFI-MAN firewall name WAN-from-UNIFI-MAN-v4"
-          - "set zone-policy zone WAN-Cellular interface {{ vyos__wan_cellular_interface }}"
-          # WAN-CenturyLink Zone
-          - "set zone-policy zone WAN-CenturyLink default-action drop"
-          - "set zone-policy zone WAN-CenturyLink description 'CenturyLink WAN connection ({{ ansible_managed }})'"
-          - "set zone-policy zone WAN-CenturyLink from GUEST firewall name WAN-from-GUEST-v4"
-          - "set zone-policy zone WAN-CenturyLink from GWORK firewall name WAN-from-GWORK-v4"
-          - "set zone-policy zone WAN-CenturyLink from HOME firewall name WAN-from-HOME-v4"
-          - "set zone-policy zone WAN-CenturyLink from IOT firewall name WAN-from-IOT-v4"
-          - "set zone-policy zone WAN-CenturyLink from LOCAL firewall name WAN-from-LOCAL-v4"
-          - "set zone-policy zone WAN-CenturyLink from MAN firewall name WAN-from-MAN-v4"
-          - "set zone-policy zone WAN-CenturyLink from ROUTER-LAB firewall name WAN-from-ROUTER-LAB-v4"
-          - "set zone-policy zone WAN-CenturyLink from SERVICE82 firewall name WAN-from-SERVICE82-v4"
-          - "set zone-policy zone WAN-CenturyLink from UNIFI-MAN firewall name WAN-from-UNIFI-MAN-v4"
-          - "set zone-policy zone WAN-CenturyLink interface pppoe0"
-        save: yes
-      tags:
-        - firewall
 
     #
     # Failover
